--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build",
     "start": "parcel index.html --open",
-    "build": "parcel build index.html --out-dir build"
+    "build": "parcel build index.html --out-dir build --public-url '/cv-cli'"
   },
   "dependencies": {
     "jquery": "3.4.1",
